minor improvement style

--- a/app/assets/stylesheets/custom/layout.scss
+++ b/app/assets/stylesheets/custom/layout.scss
@@ -8,6 +8,10 @@ main {
   background-color: $module-index-panel-background;
 }
 
+.additional-content .filter-subnav {
+  background-color: $module-index-panel-background;
+}
+
 .margin-top-25 {
   margin-top: 2.5em !important;
 }
