--- a/app/assets/stylesheets/custom/colors.scss
+++ b/app/assets/stylesheets/custom/colors.scss
@@ -20,4 +20,4 @@ $flyout-item-projekt-min-height:                  60px;
 $responsive-menu-text-color:                      $white;
 $responsive-menu-background-color:                $olive;
 
-$module-index-panel-background:                   lighten($brand, 70%);
+$module-index-panel-background:                   #b5d7a51f;
