--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,9 +1,9 @@
 // brand_color
-$brand:                                           #004a83;
-$brand:                                           green;
+$brand:                                           #818f45;
 $secondary:                                       lighten($brand, 70%);
 $tertiary:                                        lighten($brand, 50%);
-$dark:                                            darken($brand, 10%);
+$dark:                                            #565a5c;
+$olive:                                           #818f45;
 
 
 // Menu variables
@@ -12,11 +12,11 @@ $dark:                                            #222;
 $white:                                           #fff;
 
 
-$top-level-menu-item-text-color:                  $dark;
-$top-level-menu-background-color:                 $white;
-$flyout-item-text-color:                          $dark;
-$flyout-item-bg-color:                            $white;
-$flyout-block-border-color:                       #dee0e3;
+$top-level-menu-item-text-color:                  $white;
+$top-level-menu-background-color:                 $olive;
+$flyout-item-text-color:                          $white;
+$flyout-item-bg-color:                            $olive;
+$flyout-block-border-color:                       $white;
 $flyout-item-divider-color:                       lighten($flyout-block-border-color, 5%);
 $flyout-item-projekt-modules-links-color:         $flyout-item-text-color;
 
@@ -24,8 +24,8 @@ $flyout-item-projekt-modules-links-color:         $flyout-item-text-color;
 $flyout-item-line-height:                         1.5rem;
 $flyout-item-projekt-min-height:                  60px;
 
-$responsive-menu-text-color:                      $dark;
-$responsive-menu-background-color:                $white;
+$responsive-menu-text-color:                      $white;
+$responsive-menu-background-color:                $olive;
 
 $module-index-panel-background:                   lighten($brand, 70%);
 
