minor improvement style

--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,6 +1,6 @@
 // brand_color
 $brand:                                           #818f45;
-$secondary:                                       lighten($brand, 70%);
+$secondary:                                       #e7e9b5;
 $tertiary:                                        lighten($brand, 50%);
 $dark:                                            #565a5c;
 $olive:                                           #818f45;
