--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -27,7 +27,7 @@ $flyout-item-projekt-min-height:                  60px;
 $responsive-menu-text-color:                      $white;
 $responsive-menu-background-color:                $olive;
 
-$module-index-panel-background:                   lighten($brand, 70%);
+$module-index-panel-background:                   #f3f7e5;
 
 
 
