--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -1,6 +1,6 @@
 // brand_color
-$brand:                                           #004a83;
-$secondary:                                       lighten($brand, 70%);
+$brand:                                           #8DBF42;
+$secondary:                                       rgba(141, 191, 66, 0.05);
 $tertiary:                                        lighten($brand, 50%);
 $dark:                                            darken($brand, 10%);
 
