--- a/app/assets/stylesheets/custom/shared.scss
+++ b/app/assets/stylesheets/custom/shared.scss
@@ -142,7 +142,7 @@
 // Summary styling
 
 .debate-show blockquote, .proposal-show blockquote, .poll-question-show blockquote, .budget-investment-show blockquote, .polls-show blockquote, .debate-quiz blockquote, .budget-investment-show blockquote, .draft-panels blockquote, .debate-questions blockquote, .communities-show blockquote, .topic-show blockquote, .milestone-content blockquote {
-  background-color: lighten($brand, 70%);
+  background-color: $secondary;
   font-size: 1.25em;
 	padding-top: 10px;
 	padding-bottom: 8px;
