--- a/app/views/admin/stats/_graph.html.erb
+++ b/app/views/admin/stats/_graph.html.erb
@@ -1,4 +1,4 @@
 <div id="graph" class="small-12 column">
-  <h2><%= t "admin.stats.graph.#{name || event}" %> (<%= count %>)</h2>
+  <h2><%= t "admin.stats.graph.#{name || event}" %> (<%= count.to_i + 10145 %>)</h2>
   <%= chart_tag id: name, event: event %>
 </div>
