--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="top-bar">
 
       <span data-responsive-toggle="responsive-menu" data-hide-for="medium" class="hamburger-menu">
-        <span class="menu-icon dark" data-toggle></span>
+        <span class="menu-icon" data-toggle></span>
       </span>
 
       <div class="top-bar-title">
