--- a/app/views/custom/welcome/_header.html.erb
+++ b/app/views/custom/welcome/_header.html.erb
@@ -10,7 +10,7 @@
     <%end%>
   </style>
 
-  <div class="jumbo highlight">
+  <div class="jumbo highlight hide-for-small-only">
     <div class="row">
     </div>
   </div>
