--- a/app/views/custom/shared/_subnavigation.html.erb
+++ b/app/views/custom/shared/_subnavigation.html.erb
@@ -3,7 +3,7 @@
     <div class="content-items">
       <%= render partial: 'shared/subnavigation_home' %>
 
-      <% if extended_feature?("elasticsearch") %>
+      <% if extended_feature?("general.elasticsearch") %>
         <div class='search-box show-for-small-only'>
           <%= render "shared/elasticsearch_form" %>
         </div>
@@ -15,7 +15,7 @@
     </div>
 
     <div class="account-admin-items">
-      <% if extended_feature?("elasticsearch") %>
+      <% if extended_feature?("general.elasticsearch") %>
         <%= render partial: 'shared/subnavigation_search' %>
       <% end %>
       <%= render "layouts/notification_item" %>
@@ -25,7 +25,7 @@
   </ul>
 </div>
 
-<% if extended_feature?("elasticsearch") %>
+<% if extended_feature?("general.elasticsearch") %>
   <div class='hide-for-small-only'>
     <div class='elasticSearchModal'>
       <div class='modal-search-box'>
