--- a/app/views/custom/debates/index.html.erb
+++ b/app/views/custom/debates/index.html.erb
@@ -56,13 +56,13 @@
         <div class="row">
           <div class="small-12 column">
             <%= render "view_mode" %>
-            <% unless extended_feature?("elasticsearch")%>
+            <% unless extended_feature?("general.elasticsearch")%>
               <%= yield :header_addon %>
             <% end %>
           </div>
         </div>
 
-        <% unless extended_feature?("elasticsearch") %>
+        <% unless extended_feature?("general.elasticsearch") %>
           <%= render "shared/advanced_search", search_path: debates_path(page: 1) %>
         <% end %>
 
