--- a/app/views/custom/shared/_projekts_filter.html.erb
+++ b/app/views/custom/shared/_projekts_filter.html.erb
@@ -1,28 +1,20 @@
-<% params[:projekts] ||= '' %>
+<% projekts.each do |projekt| %>
+  <% label_class =  ( @selected_projekts_ids && projekt.id.to_s.in?(@selected_projekts_ids) ) ? 'label-selected' : 'label_regular' %>
+  <% checkbox_checked = @selected_projekts_ids && projekt.id.to_s.in?(@selected_projekts_ids)  %>
+  <% projekt_color = projekt&.map_location&.pin_color || '#00cae9' %>
 
-<ul>
-  <% projekts.each do |projekt| %>
-    <% projekt_and_nested_projekts_ids = projekt.all_children_ids.push(projekt.id) %>
-    <% selected_projekts = params[:projekts].split(',')  %>
-
-    <% toggle_projekt = '' %>
-    <% toggle_projekt = 'show-projekt' if (selected_projekts & projekt_and_nested_projekts_ids.map(&:to_s)).any? %>
-    <% toggle_projekt = 'show-projekt' if (aggregations.keys & projekt_and_nested_projekts_ids).any? %>
-
-    <% projekt.id.to_s.in?(selected_projekts) ? label_class = 'label-selected' : label_class = '' %>
-    <% projekt.id.in?(aggregations.keys) ? highlight_class = 'label-highlighted' : highlight_class = '' %>
-
-    <li class=<%= toggle_projekt %>>
-      <%= label_tag projekt.name, class: "#{label_class} #{highlight_class}" do %>
-        <%= check_box_tag projekt.name, projekt.id, projekt.id.to_s.in?(params[:projekts].split(',')), { class: 'js-filter-projekt' }  %>
+  <ul>
+    <li class=''>
+      <%= label_tag dom_id(projekt), class: label_class do %>
+        <%= check_box_tag dom_id(projekt), projekt.id, checkbox_checked, { class: 'js-filter-projekt' }  %>
         <%= projekt.name %>
         <%= "(#{aggregations[projekt.id]})" if aggregations[projekt.id].present?  %>
         <span class="checkmark"></span>
+        <span class="color-code" style="background-color: <%= projekt_color %>" ></span>
       <% end %>
 
-      <% if projekt.all_children_ids.any? %>
-        <div class='projekt-arrow js-show-children-projekts-in-filter' <%= label_class %> >
-        </div>
+      <% if projekt.children.any? %>
+        <span class='js-icon-toggle-child-projekts toggle-arrow'></span>
       <% end %>
     </li>
 
@@ -30,5 +22,5 @@
       <%= render partial: "shared/projekts_filter", locals: { projekts: projekt.children.with_order_number, aggregations: aggregations } %>
     <% end %>
 
-  <% end %>
-</ul>
+  </ul>
+<% end %>
