--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,9 @@
 
   <div class="top-links">
     <div class="row">
-      <%= render "shared/locale_switcher" %>
+      <div class="hide-for-small-only">
+        <%= render "shared/locale_switcher" %>
+      </div>
       <div class="hide-for-small-only">
         <%= render "shared/top_links" %>
       </div>
@@ -15,9 +17,8 @@
   <div class="row">
     <div class="top-bar">
 
-      <span data-responsive-toggle="responsive-menu" data-hide-for="medium" class="float-right">
+      <span data-responsive-toggle="responsive-menu" data-hide-for="medium" class="hamburger-menu">
         <span class="menu-icon dark" data-toggle></span>
-        <%= t("application.menu") %>
       </span>
 
       <div class="top-bar-title">
@@ -28,14 +29,11 @@
 
       <div id="responsive-menu">
         <div class="top-bar-right">
-          <ul class="menu" data-responsive-menu="medium-dropdown">
-            <%= render "shared/admin_login_items" %>
-            <%= render "layouts/notification_item" %>
-            <%= render "devise/menu/login_items" %>
-          </ul>
-
           <div class="show-for-small-only">
             <div class="subnavigation row">
+
+              <h2 class='city-name'><%= Setting['org_name'] %></h2>
+
               <%= render "shared/subnavigation" %>
               <div class="small-12 column">
                 <%= render "shared/top_links" %>
@@ -51,9 +49,6 @@
     <div class="row">
       <div class="hide-for-small-only">
         <%= render "shared/subnavigation" %>
-      </div>
-      <div class="small-12 medium-3 column">
-        <%= yield :header_addon %>
       </div>
     </div>
   </div>
