--- a/app/views/comments/_comment_tree.html.erb
+++ b/app/views/comments/_comment_tree.html.erb
@@ -31,7 +31,7 @@
           <% end %>
         <% else %>
           <br>
-          <%= render "shared/login_to_comment" %>
+          <%#= render "shared/login_to_comment" %>
         <% end %>
 
         <%= render "comments/comment_list", comments: comment_tree.root_comments, valuation: valuation %>
