--- a/app/views/custom/debates/_votes.html.erb
+++ b/app/views/custom/debates/_votes.html.erb
@@ -78,7 +78,7 @@
 
     <% elsif !user_signed_in? %>
       <div tabindex="0">
-        <%= render "shared/login_to_vote" %>
+        <%#= render "shared/login_to_vote" %>
       </div>
     <% end %>
 
