--- a/app/views/legislation/annotations/_form.html.erb
+++ b/app/views/legislation/annotations/_form.html.erb
@@ -23,7 +23,7 @@
           <%= f.hidden_field :ranges %>
         <% end %>
       <% else %>
-        <%= render "shared/login_to_comment" %>
+        <%#= render "shared/login_to_comment" %>
       <% end %>
     </div>
   </div>
