--- a/app/views/proposals/_votes.html.erb
+++ b/app/views/proposals/_votes.html.erb
@@ -35,7 +35,7 @@
     </div>
   <% elsif !user_signed_in? %>
     <div tabindex="0">
-      <%= render "shared/login_to_vote" %>
+      <%#= render "shared/login_to_vote" %>
     </div>
   <% end %>
 
