--- a/app/views/custom/pages/projekt_footer/_comments.html.erb
+++ b/app/views/custom/pages/projekt_footer/_comments.html.erb
@@ -32,7 +32,7 @@
 
       <% else %>
         <br>
-        <%= render "shared/login_to_comment" %>
+        <%#= render "shared/login_to_comment" %>
       <% end %>
 
       <%= render "comments/comment_list", comments: @comment_tree.root_comments, comments_allowed: comments_allowed  %>
