--- a/app/views/debates/_votes.html.erb
+++ b/app/views/debates/_votes.html.erb
@@ -57,7 +57,7 @@
     </div>
   <% elsif !user_signed_in? %>
     <div tabindex="0">
-      <%= render "shared/login_to_vote" %>
+      <%#= render "shared/login_to_vote" %>
     </div>
   <% end %>
 </div>
