--- a/app/views/legislation/annotations/_comments_box.html.erb
+++ b/app/views/legislation/annotations/_comments_box.html.erb
@@ -37,7 +37,7 @@
 
       <div>
         <div class="participation-not-allowed" style="display: none;" aria-hidden="false">
-          <%= sanitize(t("users.login_to_comment",
+          <%# = sanitize(t("users.login_to_comment",
               signin: link_to_signin, signup: link_to_signup)) %>
         </div>
       </div>
