--- a/app/views/proposals/_featured_votes.html.erb
+++ b/app/views/proposals/_featured_votes.html.erb
@@ -26,7 +26,7 @@
       </p>
     </div>
   <% elsif !user_signed_in? %>
-    <%= render "shared/login_to_vote" %>
+    <%#= render "shared/login_to_vote" %>
   <% end %>
 
   <% if voted_for?(@featured_proposals_votes, proposal) %>
