--- a/app/views/topics/_comments.html.erb
+++ b/app/views/topics/_comments.html.erb
@@ -10,7 +10,7 @@
       <% if user_signed_in? %>
         <%= render "comments/form", { commentable: @topic, parent_id: nil } %>
       <% else %>
-        <%= render "shared/login_to_comment" %>
+        <%#= render "shared/login_to_comment" %>
       <% end %>
     </div>
   </div>
