--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -16,8 +16,7 @@
 
 
     @media only screen and (max-width: 550px) {
-      padding-top: 20px;
-      padding-bottom: rem-calc(1);
+      height: 380px;
 
       span {
         display: none;
@@ -44,8 +43,7 @@
     }
 
     @media only screen and (min-width: 550px) and (max-width: 639px) {
-      padding-top: 20px;
-      padding-bottom: rem-calc(1);
+      height: 380px;
 
       span {
         display: none;
@@ -73,11 +71,12 @@
     }
 
     @media only screen and (min-width: 640px) and (max-width: 768px) {
-      padding-top: 20px;
-      padding-bottom: rem-calc(150);
+      height: 380px;
 
       span {
-        display: none;
+        font-size: rem-calc(35);
+        font-weight: 300;
+        line-height: rem-calc(30);
       }
 
       h1 {
@@ -102,12 +101,10 @@
 
     @media only screen and (min-width: 768px) and (max-width: 1280px) {
       height: 380px;
-      background-position: $welcomebgposition;
-      padding-top: $welcometextpositionmedium;
       
       span {
-        color: $welcomespan;
-        font-size: rem-calc(15);
+        // color: $welcomespan;
+        font-size: rem-calc(40);
         font-weight: 300;
         line-height: rem-calc(30);
       }
@@ -133,13 +130,11 @@
     }
 
     @media only screen and (min-width: 1280px) and (max-width: 1900px) {
-      height: 500px;
-      background-position: $welcomebgposition;
-      padding-top: $welcometextpositionmedium;
+      height: 590px;
 
       span {
-        color: $welcomespan;
-        font-size: rem-calc(15);
+        // color: $welcomespan;
+        font-size: rem-calc(45);
         font-weight: 300;
         line-height: rem-calc(30);
       }
@@ -166,8 +161,6 @@
 
     @media only screen and (min-width: 1900px) {
       height: 600px;
-      background-position: $welcomebgposition;
-      padding-top: $welcometextpositionlarge;
 
       span {
         color: $welcomespan;
