--- a/app/views/cli/welcome/_header.html.erb
+++ b/app/views/cli/welcome/_header.html.erb
@@ -47,6 +47,7 @@
     <div class='row'>
       <div class='small-12 column text-center'>
          <h2><%= t('cli.welcome.partner_title') %></h2>
+         <p class='small-12 medium-6'><%= sanitize(t('cli.welcome.partner_text')) %></p>
          <%= image_tag 'wertebuendnis_bayern_logo.png', width: '120' %>
          <%= image_tag 'akademie_phil_logo.png', width: '305' %>
          <%= image_tag 'europaeische-akademie_logo.png', width: '90' %>
