--- a/app/assets/stylesheets/custom/welcome.scss
+++ b/app/assets/stylesheets/custom/welcome.scss
@@ -163,8 +163,8 @@
       height: 600px;
 
       span {
-        color: $welcomespan;
-        font-size: rem-calc(20);
+        // color: $welcomespan;
+        font-size: rem-calc(45);
         font-weight: 300;
         line-height: rem-calc(30);
       }
