--- a/app/assets/stylesheets/_custom_settings.scss
+++ b/app/assets/stylesheets/_custom_settings.scss
@@ -50,8 +50,8 @@ $welcomespan:                 $brand;
 
 
 // fonts
-$body-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
-$header-font-family: 'sourcesanspro-regular-webfont', 'sourcesanspro-bold-webfont', 'PT_Serif_Web-Regular', sans-serif !important;
+$body-font-family: 'Source Sans Pro', sans-serif !important;
+$header-font-family: 'Source Sans Pro', sans-serif !important;
 $base-font-size:      16px;
 
 // Regular 
