--- a/app/views/custom/layouts/_footer.html.erb
+++ b/app/views/custom/layouts/_footer.html.erb
@@ -14,7 +14,13 @@
     </div>
 
     <div class="small-12 large-4 column">
-      <%=render_custom_block 'footer_block_1' %>
+      <%= render "shared/social_share",
+        share_title: t("debates.show.share"),
+        title: Setting["org_name"],
+        url: root_url,
+        description: 'description',
+        mobile: Setting["org_name"]
+      %>
     </div>
 
     <div class="small-12 large-4 column">
@@ -27,7 +33,6 @@
       <%= t("layouts.footer.copyright", year: Time.current.year) %>&nbsp;|
       <ul class="no-bullet inline-block">
         <li class="inline-block"><%= link_to t("layouts.footer.privacy"), page_path("privacy") %>&nbsp;|</li>
-        <li class="inline-block"><%= link_to t("layouts.footer.conditions"), page_path("conditions") %>&nbsp;|</li>
         <li class="inline-block"><%= link_to t("layouts.footer.accessibility"), page_path("accessibility") %>&nbsp;|</li>
         <li class="inline-block"><%= link_to t("custom.layouts.footer.impressum"), page_path("impressum") %></li>
       </ul>
