--- a/app/views/cli/welcome/index.html.erb
+++ b/app/views/cli/welcome/index.html.erb
@@ -11,4 +11,41 @@
 
 <main>
   <%= render "header", header: @header %>
+
+  <div class='typeform-wrapper'>
+    <div class='row'>
+      <div class='column'>
+        <div class="typeform-widget"
+             data-url="https://form.typeform.com/to/VBrDRrvn?typeform-medium=embed-snippet"
+             style="width: 100%; height: 900px;">
+        </div>
+        <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+      </div>
+    </div>
+  </div>
+
+  <div class='win-logos'>
+    <div class='row'>
+      <div class='small-12 column text-center'>
+         <h2><%= t('cli.welcome.win_title') %></h2>
+         <%= image_tag 'hugendubel_logo.png', width: '258' %>
+         <%= image_tag 'skyline_park_logo.png', width: '171' %>
+         <%= image_tag 'cinemaxx_logo.png', width: '298' %>
+      </div>
+    </div>
+  </div>
+
+  <div class='partner-logos'>
+    <div class='row'>
+      <div class='small-12 column text-center'>
+         <h2><%= t('cli.welcome.partner_title') %></h2>
+         <%= link_to(image_tag("wertebuendnis_bayern_logo.png", alt: "Wertebündnis Bayern", width: "120"), "https://wertebuendnis-bayern.de", target:"_blank") %>
+         <%= link_to(image_tag("akademie_phil_logo.png", alt: "Akademie für Philosophische Bildung", width: "305"), "https://philosophische-bildung.de", target:"_blank") %>
+         <%= link_to(image_tag("europaeische-akademie_logo.png", alt: "Europäische Akademie Bayern", width: "90"), "https://europaeische-akademie.de", target:"_blank") %>
+         <%= link_to(image_tag("rock_your_life_logo.png", alt: "Rock Your Life", width: "140"), "https://rockyourlife.de", target:"_blank") %>
+         <%= link_to(image_tag("ekairos_logo.png", alt: "eKAIROS", width: "175"), "https://ekairos.net", target:"_blank") %>
+         <%= link_to(image_tag("mehr_demokratie_logo.png", alt: "Mehr Demokratie e.V.", width: "120"), "https://bayern.mehr-demokratie.de", target:"_blank") %>
+      </div>
+    </div>
+  </div>
 </main>
