--- a/app/views/cli/welcome/index.html.erb
+++ b/app/views/cli/welcome/index.html.erb
@@ -28,9 +28,9 @@
     <div class='row'>
       <div class='small-12 column text-center'>
          <h2><%= t('cli.welcome.win_title') %></h2>
-         <%= image_tag 'hugendubel_logo.png', width: '258' %>
+         <%= image_tag 'hugendubel.png', width: '351' %>
          <%= image_tag 'skyline_park_logo.png', width: '171' %>
-         <%= image_tag 'cinemaxx_logo.png', width: '298' %>
+         <%= image_tag 'cinemaxx.png', width: '314' %>
       </div>
     </div>
   </div>
@@ -39,12 +39,12 @@
     <div class='row'>
       <div class='small-12 column text-center'>
          <h2><%= t('cli.welcome.partner_title') %></h2>
-         <%= link_to(image_tag("wertebuendnis_bayern_logo.png", alt: "Wertebündnis Bayern", width: "120"), "https://wertebuendnis-bayern.de", target:"_blank") %>
-         <%= link_to(image_tag("akademie_phil_logo.png", alt: "Akademie für Philosophische Bildung", width: "305"), "https://philosophische-bildung.de", target:"_blank") %>
-         <%= link_to(image_tag("europaeische-akademie_logo.png", alt: "Europäische Akademie Bayern", width: "90"), "https://europaeische-akademie.de", target:"_blank") %>
-         <%= link_to(image_tag("rock_your_life_logo.png", alt: "Rock Your Life", width: "140"), "https://rockyourlife.de", target:"_blank") %>
-         <%= link_to(image_tag("ekairos_logo.png", alt: "eKAIROS", width: "175"), "https://ekairos.net", target:"_blank") %>
-         <%= link_to(image_tag("mehr_demokratie_logo.png", alt: "Mehr Demokratie e.V.", width: "120"), "https://bayern.mehr-demokratie.de", target:"_blank") %>
+         <%= link_to(image_tag("wertebuendnis.png", alt: "Wertebündnis Bayern", width: "200"), "https://wertebuendnis-bayern.de", target:"_blank") %>
+         <%= link_to(image_tag("phil_akademie.png", alt: "Akademie für Philosophische Bildung", width: "413"), "https://philosophische-bildung.de", target:"_blank") %>
+         <%= link_to(image_tag("eu_akademie.png", alt: "Europäische Akademie Bayern", width: "200"), "https://europaeische-akademie.de", target:"_blank") %>
+         <%= link_to(image_tag("rock.png", alt: "Rock Your Life", width: "200"), "https://rockyourlife.de", target:"_blank") %>
+         <%= link_to(image_tag("ekai.png", alt: "eKAIROS", width: "270"), "https://ekairos.net", target:"_blank") %>
+         <%= link_to(image_tag("mehr.png", alt: "Mehr Demokratie e.V.", width: "337"), "https://bayern.mehr-demokratie.de", target:"_blank") %>
       </div>
     </div>
   </div>
