--- a/app/views/cli/welcome/_header.html.erb
+++ b/app/views/cli/welcome/_header.html.erb
@@ -18,9 +18,9 @@
 			<div class="column">
         <div class='jumbo-message'>
 					<h1>Mitmachen Kirchheim</h1>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec qu</p>
-          <%= link_to 'Lorem ipsum', '#', class: 'button' %>
-
+          <p>Mit dieser Seite ermöglicht die Gemeinde Kirchheim b. München Ihre Partizipation bei der Entwicklung unserer Gemeinde. Sie können sich informieren, diskutieren und über Dinge abstimmen, die Ihnen wichtig sind.</p>
+          <p>Ihre Anregungen werden von der Verwaltung und der Politik aufgenommen und bei der Planung berücksichtigt. Die Umsetzung Ihrer Wünsche kann zwar nicht garantiert werden, sehr wohl aber die Beachtung und Abwägung Ihrer Anregungen.</p>
+          <p>Wir freuen uns auf Ihre Beteiligung, viel Spaß beim Mitmachen!</p>
 				</div>
 			</div>
     </div>
