--- a/app/views/custom/users/registrations/complete.html.erb
+++ b/app/views/custom/users/registrations/complete.html.erb
@@ -1,11 +1,13 @@
 <% provide :title do %><%= t("devise_views.users.registrations.new.title") %><% end %>
 
-<h2>Registrieren</h2>
+<h2><%= t('custom.sign_up.common.register') %></h2>
 
-<h4>Herzlichen Glückwunsch!</h4>
+<%= render 'sign_up_progress_bar' %>
 
-<p>Sie haben beide Verifizierungsschritte durchlaufen. Wir werden Ihre Daten jetzt prüfen und Sie per E-Mail benachrichtigen, sobald Ihr Konto mit dem Einwohnermelderegister abgeglichen wurde. Dies kann einige Minuten dauern.</p>
+<h4><%= t('custom.sign_up.complete.welcome') %></h4>
+<p class='info-details'><%= t('custom.sign_up.complete.welcome_text') %></p>
+
 
 <div class="small-12 medium-6 small-centered margin-top">
-  <%= link_to "Zu bamberg-gestalten.de wechseln", root_path, class: "button expanded" %>
+  <%= link_to t('custom.sign_up.complete.button'), root_path, class: "button expanded" %>
 </div>
