minor view improvements

--- a/app/views/custom/users/registrations/user_details.html.erb
+++ b/app/views/custom/users/registrations/user_details.html.erb
@@ -49,11 +49,13 @@
 
   <div class='row margin-bottom'>
     <div class='column small-12 medium-6'>
+      <label><%= t('custom.sign_up.user_details.card_label') %></label>
       <p><%= t('custom.sign_up.user_details.card_help') %></p>
       <%= image_tag 'card.jpeg' %>
     </div>
 
     <div class='column small-12 medium-6'>
+      <label><%= t('custom.sign_up.user_details.pass_label') %></label>
       <p><%= t('custom.sign_up.user_details.pass_help') %></p>
       <%= image_tag 'pass.jpeg' %>
     </div>
