--- a/app/assets/stylesheets/cli/sign_up.scss
+++ b/app/assets/stylesheets/cli/sign_up.scss
@@ -9,10 +9,7 @@
     font-size: 0.875rem;
     margin-bottom: 1rem;
   }
-
-
 }
-
 
 .user-date-of-birth {
   display: flex;
@@ -82,5 +79,30 @@
     background-color: $brand;
     color: $white;
   }
+}
+
+ol.numbered-list-big {
+  counter-reset: item;
+  list-style-type: none;
+
+  &>li {
+    display: block;
+    position: relative;
+  }
   
+  &>li:before {
+    content: counter(item) " ";
+    counter-increment: item;
+    position: absolute;
+    background-color: $brand;
+    color: #fff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    font-weight: bold;
+    left: -22px;
+    top: 2px;
+    text-align: center;
+    line-height: 1.3;
+  }
 }
