--- a/app/views/custom/users/registrations/new.html.erb
+++ b/app/views/custom/users/registrations/new.html.erb
@@ -11,7 +11,7 @@
 <p class='info-details'><%= t('custom.sign_up.new.information_details') %></p>
 
 
-<ol>
+<ol class='numbered-list-big'>
   <li>
     <h4><%= t('custom.sign_up.new.bullet_1') %></h4>
     <p><%= t('custom.sign_up.new.bullet_1_text') %></p>
