--- a/app/views/custom/users/registrations/user_details.html.erb
+++ b/app/views/custom/users/registrations/user_details.html.erb
@@ -51,13 +51,13 @@
     <div class='column small-12 medium-6'>
       <label><%= t('custom.sign_up.user_details.card_label') %></label>
       <p><%= t('custom.sign_up.user_details.card_help') %></p>
-      <%= image_tag 'card.jpeg' %>
+      <%= image_tag 'card.jpg' %>
     </div>
 
     <div class='column small-12 medium-6'>
       <label><%= t('custom.sign_up.user_details.pass_label') %></label>
       <p><%= t('custom.sign_up.user_details.pass_help') %></p>
-      <%= image_tag 'pass.jpeg' %>
+      <%= image_tag 'pass.jpg' %>
     </div>
   </div>
 
